# dlflow

./: .gitignore  GEMINI.md  README.md  justfile  package.json
.tasks/: 2025-01-15_1_frontend-restructure.md  2025-01-15_2_project-restructure.md  2025-01-15_3_project-workspace-integration.md  2025-01-15_4_workspace-api-fix.md  2025-01-15_5_file-upload-enhancement.md  2025-01-15_6_data-processing-system.md  2025-01-15_7_add-arrow-to-connections.md
.trae/documents/: product_requirements.md  technical_architecture.md
api/: app.ts  package.json  server.ts
api/routes/: auth.ts  projects.ts
api/services/: file_validator.py
backend/: check_projects.py  main.py  pyproject.toml
backend/api/: app.ts  package-lock.json  package.json  server.ts  tsconfig.json
backend/api/routes/: executions.ts  files.ts  node-types.ts  projects.ts  workflows.ts
backend/app/: __init__.py  database.py
backend/app/api/: routes.py
backend/app/api/endpoints/: analysis.py  charts.py  executions.py  files.py  node_types.py  output.py  projects.py  tasks.py  transform.py  workflows.py
backend/app/core/: __init__.py  config.py  scheduler.py  storage.py
backend/app/models/: __init__.py  base.py  execution.py  file.py  project.py  task.py  workflow.py
backend/app/services/: data_processor.py  task_executor.py  task_manager.py
backend/data/projects/: index.json
data/: dlflow.db
data/projects/: ddc86d34-629d-4922-acd6-9be35c48953d.json  index.json
docs/: architecture.md
frontend/: nodemon.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  (+1 more)
(+20 files in other folders)
