[project]
name = "dlflow-backend"
version = "0.1.0"
description = "数据处理Web应用后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "polars>=0.20.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 88
target-version = ['py311']


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true